
2023-07-10  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_fence), common.h: new function to check for writing
	  outside of COBOL data, triggered with compile option -fmemory-check
	* statement.def (STMT_BEFORE_CALL, STMT_BEFORE_UDF): new internal
	  statements, currently used for cob_check_fence

2023-06-22  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_set_packed): backport pack_to_bin change while
	  adjusting its translation table for invalid BCD "digits" to yield the
	  same result as before
	* numeric.c (cob_decimal_set_packed): more optimizations for speed
	* move.c (cob_packed_get_int, packed_get_long_long): apply optimizations
	  from (cob_decimal_set_packed) including skipping leading zeros and
	  pack_to_bin
	* common.c (b2i): include marker for invalid data (previously not set)

2023-06-21  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_set_packed_u64): extracted from cob_set_packed_int
	  and extended, allowing to internally use bigger values without
	  a double-check of the sign
	* numeric.c (cob_decimal_get_packed): set by unsigned long when possible,
	  instead of signed int (increasing from 9 to 19 digits for many systems)
	* numeric.c (cob_decimal_get_display, cob_decimal_set_display,
	  cob_decimal_do_round): fix compile warnings

2023-06-20  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (get_screenio_and_mouse_info) [__PDCURSES__]:
	  drop old version checks, set patch version
	* common.c (cob_check_field_offset): new not-yet-active function
	  for subscript check by offset like IBM (see FR #437)

2023-06-03  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (libcob_la_LDFLAGS): updated version-info - ABI fixed for 3.2

2023-06-02  Simon Sobisch <simonsobisch@gnu.org>

	* common.h (cob_file_org, cob_file_access_mode): changed defines to enums
	* fileio.c (cob_findkey_attr): extracted identical logic from cob_findkey,
	  indexed_findkey and bdb_findkey;